TEST_PROGRAMS/INVALID/05/multiple_unary_minus_no_paren.go
package main

func main() {
  x := 10
  // Error: Cannot have multiple unary minus without parenthesis
  println(--x)
}
